@@ -1,3 +1,9 @@
+2005-06-04  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>
+
+	* parser.y: Add an optional `;' at the end of a rule, in the style
+	of yacc(1).
+	
+
 
 
 2005-05-26  Sebastien Pouliot  <sebastien@ximian.com>
